fix text/close button wrapping during dragging of tags

--- a/scss/tags-input.scss
+++ b/scss/tags-input.scss
@@ -35,6 +35,7 @@ tags-input {
       line-height: $tag-height - 1px;
       border: $tag-border;
       border-radius: $tag-border-radius;
+      overflow:hidden;
       @include gradient($tag-color);
 
       &.selected {
